Fix responsive text alignment on image captions

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
 body {
     font-family: 'Raleway', sans-serif;
     background-color: #f2e9e4;
+    width: 95%;
+    margin-left: 0px;
 }
 
 /* Navigation Styles */
@@ -10,11 +12,12 @@ nav {
     width: 100%;
     height: 130px;
     position: fixed;
+    margin-left: 0px;
     margin-top: -150px;
     background-color: #4a4e69;
     box-shadow: 0px 3px 3px #22223b;
     z-index: 1;
-    overflow: hidden;
+    overflow: hidden!important;
 }
 
 .main-title {
@@ -76,7 +79,10 @@ nav {
     border-radius: 50%;
     height: auto;
     width: 35%;
-    max-width: 400px;
+    max-height: 300px;
+    max-width: 300px;
+    min-width: 100px;
+    min-height: 100px;
     float: left;
     margin-right: 10px;
     box-shadow: 1px 3px 3px grey;
@@ -85,6 +91,8 @@ nav {
 .personal-statement {
     text-align: justify;
 }
+
+
 
 .personal-statement h2 {
     text-transform: uppercase;
@@ -166,8 +174,10 @@ footer {
     background-color: #4a4e69;
     width: 100%;
     padding: 20px;
-    overflow: hidden;
+    overflow: hidden!important;
     box-shadow: 0px -3px 3px #22223b;
+    text-align: center;
+    margin: 0px;
 }
 
 footer a {
@@ -175,16 +185,48 @@ footer a {
 }
 
 .icons {
-    width: 300px;
-    display: inline-block;
-    margin: 0 auto;
-}
-.icons img {
-    height: auto;
-    width: 10%;
-    max-width: 30px;
-    margin: auto;
-    padding: 0 20px;
-    
+    padding: 0;
+
 }
 
+.icons li {
+    display: inline;
+    list-style: none;
+    margin: 0;
+}
+
+.linkedin-logo,
+.github-logo,
+.cv-download {
+    width: 30px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+/* Responsive */
+@media only screen and (min-width: 1000px) {
+    .personal-statement {
+        height: 300px;
+
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+    .personal-statement {
+        min-width: 300px;
+    }
+    .tile {
+        display: inline;
+        width: 100%;
+        margin: 20px auto;
+    }
+}
+
+@media only screen and (max-width: 763px) {
+    .caption h4{
+        max-height: 40px;
+        min-height: 35px;
+        line-height: 15px;
+    }
+}
